# streamlit-docker-example

./: .env-template  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
libraries/common_authentication/: pyproject.toml
libraries/common_authentication/common_authentication/: authentication.py
